[package]
name = "cargo-fox"
description = "Add foxes to your project"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/winterqt/cargo-fox"
readme = "README.md"
license = "MIT"
exclude = [".envrc", "flake.nix", "flake.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
rand = "0.8.4"
structopt = "0.3.25"
syn = { version = "1.0.82", features = ["full"] }
walkdir = "2.3.2"
